# labs_PA_22

0381_Sokolov_Dmitry/lab1/src/: CMakeLists.txt  source.cpp
0381_Sokolov_Dmitry/lab1/src/configuration/: config.cpp  config.h
0381_Sokolov_Dmitry/lab1/src/first_task/: ProcessHandler.cpp  ProcessHandler.h
0381_Sokolov_Dmitry/lab1/src/matrices/: Matrix.cpp  Matrix.h
0381_Sokolov_Dmitry/lab1/src/second_task/: ThreadHandler.cpp  ThreadHandler.h
0381_Sokolov_Dmitry/lab1/src/structs/: Matrix.cpp  Matrix.h
0381_Sokolov_Dmitry/lab1/src/third_task/: MultiThread.cpp  MultiThread.h
0381_Sokolov_Dmitry/lab1/src/utility/: DataHandler.cpp  DataHandler.h  session_timer.cpp  session_timer.h
0381_Sokolov_Dmitry/lab3/src/: CMakeLists.txt  main.cpp
0381_Sokolov_Dmitry/lab3/src/buffers/: BQueue.h  Node.h  Treiber_stack.h
0381_Sokolov_Dmitry/lab3/src/config/: Config.cpp
0381_Sokolov_Dmitry/lab3/src/matrix/: Matrix.cpp  Matrix.h  MatrixHandler.h
0381_Sokolov_Dmitry/lab3/src/utilities/: session_timer.cpp  session_timer.h
0381_Sokolov_Dmitry/lab4/src/: CMakeLists.txt  main.cpp
0381_Sokolov_Dmitry/lab4/src/buffers/: Treiber_stack.h
0381_Sokolov_Dmitry/lab4/src/config/: Config.cpp  Config.h
0381_Sokolov_Dmitry/lab4/src/logging/: Logger.cpp  Logger.h  Message.cpp  Message.h
0381_Sokolov_Dmitry/lab4/src/matrix/: Matrix.cpp  Matrix.h  MatrixHandler.cpp  MatrixHandler.h
0381_Sokolov_Dmitry/lab4/src/utilities/: Generator.h
9303_Eiswald_Mikhail/lb2/: CMakeLists.txt  main.cpp
9303_Eiswald_Mikhail/lb2/args/: args.cpp  args.h
9303_Eiswald_Mikhail/lb2/matrix/: matrix.cpp
9303_Eiswald_Mikhail/lb2/sync-buffer/: syncbuffer.cpp  syncbuffer.h
9303_Eiswald_Mikhail/lb3/: CMakeLists.txt  main.cpp
9303_Eiswald_Mikhail/lb3/matrix/: matrix.h
9303_Eiswald_Mikhail/lb3/queue/: queue.h
9303_Eiswald_Mikhail/lb5/: CMakeLists.txt
9303_Eiswald_Mikhail/lb5/report/: preamble.tex  report.tex  titlepage.tex
9303_Eiswald_Mikhail/lb5/src/: libpng_boilerplate_code.cpp  libpng_boilerplate_code.h  main.cpp  mandelbrot_cpu.cpp  mandelbrot_cpu.h
9303_Eiswald_Mikhail/lb5/src/cl/: source.cl
9303_Kamakin_DV/lab1/threads/: CMakeLists.txt
9303_Kamakin_DV/lab1/threads/headers/: Configuration.h  InputReader.h  MatricesHolder.h  Matrix.h  OutputWriter.h  Starter.h  Summator.h
9303_Kamakin_DV/lab1/threads/resources/: input.txt
9303_Kamakin_DV/lab1/threads/src/: Configuration.cpp  InputReader.cpp  Matrix.cpp  Starter.cpp  Summator.cpp  main.cpp
9303_Kamakin_DV/lab3/: CMakeLists.txt
9303_Kamakin_DV/lab3/headers/: Configuration.h  MatricesHolder.h  Matrix.h  Starter.h  SynchronizedQueue.h
9303_Kamakin_DV/lab3/src/: InputReader.cpp  Matrix.cpp  OutputWriter.cpp  ParallelSummator.cpp  Starter.cpp  SummatorThread.cpp  main.cpp
9303_Kamakin_DV/lab4/: CMakeLists.txt
9303_Kamakin_DV/lab4/headers/: Configuration.h  Configurator.h  InputReader.h  MatricesHolder.h  MatricesMultiplier.h  Matrix.h  MultiplyingThread.h  OutputWriter.h  ParallelMultiplier.h  Runnable.h  SimpleMatricesMultiplier.h  Starter.h  StrassenMatricesMultiplier.h  SynchronizedQueue.h
9303_Kamakin_DV/lab4/src/: Configuration.cpp  Configurator.cpp  InputReader.cpp  Matrix.cpp  MatrixHelper.cpp  MultiplyingThread.cpp  OutputWriter.cpp  ParallelMultiplier.cpp  SimpleMatricesMultiplier.cpp  Starter.cpp  StrassenMatricesMultiplier.cpp  main.cpp
9303_Kamakin_DV/lab5/: CMakeLists.txt
9303_Kamakin_DV/lab5/src/: main.cpp  mandelbrot.cl  opencl_mandelbrot.cpp  opencl_mandelbrot.h  save_cl.cpp  save_cl.h  serial_mandelbrot.cpp  serial_mandelbrot.h  util.cpp  util.h
9303_Moskalenko_E/lab5/: CMakeLists.txt
9303_Moskalenko_E/lab5/src/: main.cpp  params.h
9303_Moskalenko_E/lab5/src/one_thread/: Color.cpp  Color.h  one_thread_mandelbrot.cpp  (+1 more)
9304_Afanasyev_A/lab1/: CMakeLists.txt  generator.cpp  input.txt
9304_Afanasyev_A/lab1/matrix/: Matrix.cpp  Matrix.h
9304_Afanasyev_A/lab1/task1/: task1.cpp  task1.h
9304_Afanasyev_A/lab1/task2/: task2.cpp  task2.h
9304_Afanasyev_A/lab1/task3/: task3.cpp  task3.h
9304_Afanasyev_A/lab1/util/: util.h
9304_Afanasyev_A/lab3/: CMakeLists.txt
9304_Afanasyev_A/lab3/blocking-stack/: BlockingStack.h
9304_Afanasyev_A/lab3/matrix/: Matrix.cpp  Matrix.h
9304_Afanasyev_A/lab3/task/: task.cpp  task.h
9304_Afanasyev_A/lab5/src/: CMakeLists.txt  main.cpp  mandelbrot.cl  mandelbrot.cpp  mandelbrot.hpp  mandelbrot_cpu.cpp  mandelbrot_cpu.hpp
9304_Aksionava_EA/lab5/src/: CMakeLists.txt  common.cpp  common.hpp  main.cpp  mandelbrot.cl  mandelbrot.cpp  mandelbrot.hpp  mandelbrot_cpu.cpp  mandelbrot_cpu.hpp
9304_Arutiunian_Vladimir/lab2/: CMakeLists.txt  input.txt  main.cpp  main.h
9304_Arutiunian_Vladimir/lab2/blocking-queue/: blocking-queue.h  blocking-queue.tpp
9304_Arutiunian_Vladimir/lab2/constant/: filenames.h
9304_Arutiunian_Vladimir/lab2/matrix/: matrix.cpp  matrix.h
9304_Arutiunian_Vladimir/lab3/: CMakeLists.txt  main.cpp  main.h
9304_Arutiunian_Vladimir/lab3/constant/: filenames.h
9304_Arutiunian_Vladimir/lab3/lock-free-queue/: lock-free-queue.h  lock-free-queue.tpp
9304_Arutiunian_Vladimir/lab3/logger/: logger.cpp  logger.h
9304_Arutiunian_Vladimir/lab3/matrix/: matrix.cpp  matrix.h
9304_Arutiunian_Vladimir/lab3/time/: Time.h
9304_Arutiunian_Vladimir/lab4/: CMakeLists.txt  input.txt  main.cpp  main.h
9304_Arutiunian_Vladimir/lab4/constant/: filenames.h
9304_Arutiunian_Vladimir/lab4/generating/: CMakeLists.txt  generate-matrices.cpp
9304_Arutiunian_Vladimir/lab4/matrix/: matrix.cpp  matrix.h
9304_Arutiunian_Vladimir/lab5/: CMakeLists.txt  main.cpp  mandelbrot.cl  opencl_mandelbrot.cpp  opencl_mandelbrot.h  sequential_mandelbrot.cpp  sequential_mandelbrot.h
9304_Arutiunian_Vladimir/lab5/time/: Time.cpp  Time.h
9304_Borisovskiy_V_U/lab5/PAThithLab/: CMakeLists.txt  cpu_mandelbrot.cpp  cpu_mandelbrot.h  main.cpp  mandelbrot.cl
Lambin/lab1/processes/: CMakeLists.txt  calculationprocess.cpp  calculationprocess.h  definitions.h  main.cpp  readingprocess.cpp  readingprocess.h  sharedmemory.cpp  sharedmemory.h  writingprocess.cpp  writingprocess.h
(+463 files in other folders)
